--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: Seurat
-Version: 2.3.3
-Date: 2018-07-02
+Version: 2.3.2
+Date: 2018-06-11
 Title: Tools for Single Cell Genomics
 Description: A toolkit for quality control, analysis, and exploration of single cell RNA sequencing data. 'Seurat' aims to enable users to identify and interpret sources of heterogeneity from single cell transcriptomic measurements, and to integrate diverse types of single cell data. See Satija R, Farrell J, Gennert D, et al (2015) <doi:10.1038/nbt.3192>, Macosko E, Basu A, Satija R, et al (2015) <doi:10.1016/j.cell.2015.05.002>, and Butler A and Satija R (2017) <doi:10.1101/164889> for more details.
 Authors@R: c(
@@ -24,6 +24,7 @@ SystemRequirements: Java (>= 6)
 Imports:
     methods,
     ROCR,
+    stringr,
     mixtools,
     lars,
     ica,
@@ -31,16 +32,22 @@ Imports:
     Rtsne,
     fpc,
     ape,
+    VGAM,
     pbapply,
     igraph,
+    FNN,
     RANN,
+    caret,
     dplyr,
     RColorBrewer,
     MASS,
     irlba,
     reshape2,
     gplots,
-    Rcpp (>= 0.11.0),
+    gdata,
+    Rcpp,
+    tclust,
+    ranger,
     dtw,
     SDMTools,
     plotly,
@@ -57,7 +64,7 @@ Imports:
     reticulate,
     foreach,
     hdf5r
-LinkingTo: Rcpp (>= 0.11.0), RcppEigen, RcppProgress
+LinkingTo: Rcpp, RcppEigen, RcppProgress
 License: GPL-3 | file LICENSE
 LazyData: true
 Collate:
@@ -96,12 +103,7 @@ Collate:
     'zfRenderSeurat.R'
 RoxygenNote: 6.0.1
 Suggests:
-    gdata,
-    VGAM,
-    tclust,
     testthat,
-    caret,
-    ranger,
     loomR,
     phateR,
     S4Vectors,
